--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dostavka</title>
+    <title>Contacts</title>
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display?styles=98774,98777,98776,98772,98773,98775,98770,98771,98769" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/oswald-4?styles=21468" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css">
@@ -211,75 +211,75 @@
                 </div>
             </section>
         </main>
-    <footer class="footer">
-        <div class="footer_wrap">
-            <div class="footer_left">
-                <div class="footer_left_top">
-                    <p>Если Вы являетесь конечным заказчиком и хотели бы получить рекомендации
-                         от других предприятий в своем регионе, напишите нам на почту или
-                          свяжитесь с нашими менеджерами по телефону.</p>
-                    <div class="foot_left_btn">
-                        <a href="">Позвонить <img src="./img/footer-call-ico.svg" alt=""></a>
-                        <a href="">Написать <img src="./img/footer-mail-ico.svg" alt=""></a>
+        <footer class="footer">
+            <div class="footer_wrap">
+                <div class="footer_left">
+                    <div class="footer_left_top">
+                        <p>Если Вы являетесь конечным заказчиком и хотели бы получить рекомендации
+                             от других предприятий в своем регионе, напишите нам на почту или
+                              свяжитесь с нашими менеджерами по телефону.</p>
+                        <div class="foot_left_btn">
+                            <a href="">Позвонить <img src="./img/footer-call-ico.svg" alt=""></a>
+                            <a href="">Написать <img src="./img/footer-mail-ico.svg" alt=""></a>
+                        </div>
+                    </div>
+                    <form action="" class="contact_us_mob">
+                        <h4>Обратная связь</h4>
+                        <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
+                            заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
+                        <input type="text" name="" id="" placeholder="Имя" class="foot_inp">
+                        <input type="text" name="" id="" placeholder="Телефон" class="foot_inp">
+                        <a type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></a>
+                    </form>
+                    <div class="footer_left_bot">
+                        <h3>Контакты</h3>
+                        <div class="footer_cont_card">
+                            <div class="footer_cont_card_l">
+                                <p class="footer_bold">Отдел сбыта</p>
+                                <p class="footer_p">8(4832) 32-10-65</p>
+                                <p class="footer_p">32-10-66</p>
+                                <p class="footer_p">32-10-67</p>
+                                <p class="footer_p"> info.sbyt@32po.ru</p>
+                            </div>
+                            <div class="footer_cont_card_r">
+                                <div class="footer_cont_card_r_desc">
+                                    <p class="footer_bold">Главный бухгалтер</p>
+                                    <p class="footer_p">info.buh@32po.ru</p>
+                                </div>
+                                <div class="footer_cont_card_r_desc">
+                                    <p class="footer_bold">Отдел снабжения</p>
+                                    <p class="footer_p">info.snab@32po.ru</p>
+                                </div>
+                                <div class="footer_cont_card_r_desc">
+                                    <p class="footer_bold">Отдел логистики</p>
+                                    <p class="footer_p"> info.log@32po.ru</p>
+                                </div>
+                                <div class="footer_cont_card_r_desc">
+                                    <p class="footer_bold">Производство</p>
+                                    <p class="footer_p">Брянск, ул. 50 Армии, 1</p>
+                                    <p class="footer_p"> info.pro@32po.ru</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <form action="" class="contact_us_mob">
-                    <h4>Обратная связь</h4>
-                    <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
-                        заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
-                    <input type="text" name="" id="" placeholder="Имя" class="foot_inp">
-                    <input type="text" name="" id="" placeholder="Телефон" class="foot_inp">
-                    <a type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></a>
-                </form>
-                <div class="footer_left_bot">
-                    <h3>Контакты</h3>
-                    <div class="footer_cont_card">
-                        <div class="footer_cont_card_l">
-                            <p class="footer_bold">Отдел сбыта</p>
-                            <p class="footer_p">8(4832) 32-10-65</p>
-                            <p class="footer_p">32-10-66</p>
-                            <p class="footer_p">32-10-67</p>
-                            <p class="footer_p"> info.sbyt@32po.ru</p>
-                        </div>
-                        <div class="footer_cont_card_r">
-                            <div class="footer_cont_card_r_desc">
-                                <p class="footer_bold">Главный бухгалтер</p>
-                                <p class="footer_p">info.buh@32po.ru</p>
-                            </div>
-                            <div class="footer_cont_card_r_desc">
-                                <p class="footer_bold">Отдел снабжения</p>
-                                <p class="footer_p">info.snab@32po.ru</p>
-                            </div>
-                            <div class="footer_cont_card_r_desc">
-                                <p class="footer_bold">Отдел логистики</p>
-                                <p class="footer_p"> info.log@32po.ru</p>
-                            </div>
-                            <div class="footer_cont_card_r_desc">
-                                <p class="footer_bold">Производство</p>
-                                <p class="footer_p">Брянск, ул. 50 Армии, 1</p>
-                                <p class="footer_p"> info.pro@32po.ru</p>
-                            </div>
-                        </div>
+                <div class="footer_right">
+                    <form action="" class="contact_us">
+                        <h4>Обратная связь</h4>
+                        <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
+                            заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
+                        <input type="text" name="name" id="" placeholder="Имя" class="foot_inp">
+                        <input type="text" name="phone" id="" placeholder="Телефон" class="foot_inp">
+                        <button type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></button>
+                    </form>
+                    <div class="footer_right_cont">
+                    <img src="./img/logo-footer.png" alt="" class="footer_right_img">
+                    <p class="footer_right_p">Более 13 лет успешной поставки оборудования и
+                         запчастей. Более 6 лет собственного производства.</p>
                     </div>
                 </div>
             </div>
-            <div class="footer_right">
-                <form action="" class="contact_us">
-                    <h4>Обратная связь</h4>
-                    <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
-                        заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
-                    <input type="text" name="" id="" placeholder="Имя" class="foot_inp">
-                    <input type="text" name="" id="" placeholder="Телефон" class="foot_inp">
-                    <a type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></a>
-                </form>
-                <div class="footer_right_cont">
-                <img src="./img/logo-footer.png" alt="" class="footer_right_img">
-                <p class="footer_right_p">Более 13 лет успешной поставки оборудования и
-                     запчастей. Более 6 лет собственного производства.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+        </footer>
     <script src="./js/main.js" ></script>
 </body>
 </html>
