--- a/products-detail.html
+++ b/products-detail.html
@@ -115,10 +115,10 @@
             <section class="intro_nav">
                 <a href="/"><img src="./img/dostavka/arrow-left-grey.png" alt="">Главная</a>
                 <p>|</p>
-                <a href="">Продукция</a>
-                <p>|</p>
-                <a href="">Для Дизелей</a>
-                <p>|</p>
+                <a href="" class="nav_mob_none">Продукция</a>
+                <p class="nav_mob_none">|</p>
+                <a href="" class="nav_mob_none">Для Дизелей</a>
+                <p class="nav_mob_none">|</p>
                 <a href="">Втулка</a>
             </section>
             <section class="intro">
@@ -139,7 +139,7 @@
                             Втулка 14.08.00.004Втулка 14.08.00.004Втулка 14.08.00.004Втулка 14.08.00.004Втулка 14.08.00.004
                         </p>
                         </div>
-                        <div class="card_desc_top">
+                        <div class="card_desc_bot">
                         <p class="old_price">7 900,65 Р</p>
                         <p class="price">2 200,25 Р</p>
                         <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
@@ -149,9 +149,19 @@
                 <div class="perk_wrap">
                     <div class="perk_nav">
                         <a href="#!" class="perk_descript perk_act">Описание</a>
+                        <div class="perk_detail perk_detail_descript_mob act">
+                            <p>Втулка 14.08.00.004</p>
+                        </div>
                         <a href="#!" class="perk_atr">Характеристики</a>
+                        <div class="perk_detail perk_detail_atr_mob">
+                            <p>Втулкины характеристики</p>
+                        </div>
                         <a href="#!" class="perk_pos">Позиция на черчеже</a>
+                        <div class="perk_detail perk_detail_pos_mob">
+                            <img src="./img/products-detail/prod-pos.png" alt="">
+                        </div>
                     </div>
+
                     <div class="perk_detail perk_detail_descript act">
                         <p>Втулка 14.08.00.004</p>
                     </div>
@@ -169,11 +179,11 @@
                     <div class="swiper swiper_my">
                         <div class="cards_wrap swiper-wrapper">
                             <div class="cards swiper-slide">
-                                <div class="cards_desc">
+                                <a href="products-detail.html"><div class="cards_desc">
                                     <img src="./img/spec-offers.png" alt="">
                                     <h4>Втулка</h4>
                                     <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                </div>
+                                </div></a>
                                 <div class="cards_price">
                                     <span>1 900,65 Р</span>
                                     <p class="price">1 200,25 Р</p>
@@ -181,11 +191,11 @@
                                 </div>
                             </div>
                             <div class="cards swiper-slide">
-                                <div class="cards_desc">
+                                <a href="products-detail.html"><div class="cards_desc">
                                     <img src="./img/spec-offers.png" alt="">
                                     <h4>Цилиндр включения жалюзи</h4>
                                     <p>ТГМ4.10.46.000 ТГМ4.10.46.000</p>
-                                </div>
+                                </div></a>
                                 <div class="cards_price">
                                     <span>7 900,65 Р</span>
                                     <p class="price">2 200,25 Р</p>
@@ -193,11 +203,11 @@
                                 </div>
                             </div>
                             <div class="cards swiper-slide">
-                                <div class="cards_desc">
+                                <a href="products-detail.html"><div class="cards_desc">
                                     <img src="./img/spec-offers.png" alt="">
                                     <h4>Балансир</h4>
                                     <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
-                                </div>
+                                </div></a>
                                 <div class="cards_price">
                                     <span>11 900,65 Р</span>
                                     <p class="price">7 100,25 Р</p>
@@ -205,11 +215,11 @@
                                 </div>
                             </div>
                             <div class="cards swiper-slide">
-                                <div class="cards_desc">
+                                <a href="products-detail.html"><div class="cards_desc">
                                     <img src="./img/spec-offers.png" alt="">
                                     <h4>Вентиль электропневматический</h4>
                                     <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
-                                </div>
+                                </div></a>
                                 <div class="cards_price">
                                     <span>7 900,65 Р</span>
                                     <p class="price">2 200,25 Р</p>
@@ -217,11 +227,11 @@
                                 </div>
                             </div>
                             <div class="cards swiper-slide">
-                                <div class="cards_desc">
+                                <a href="products-detail.html"><div class="cards_desc">
                                     <img src="./img/spec-offers.png" alt="">
                                     <h4>Вентиль электропневматический</h4>
                                     <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
-                                </div>
+                                </div></a>
                                 <div class="cards_price">
                                     <span>7 900,65 Р</span>
                                     <p class="price">2 200,25 Р</p>
@@ -229,11 +239,11 @@
                                 </div>
                             </div>
                             <div class="cards swiper-slide">
-                                <div class="cards_desc">
+                                <a href="products-detail.html"><div class="cards_desc">
                                     <img src="./img/spec-offers.png" alt="">
                                     <h4>Вентиль электропневматический</h4>
                                     <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
-                                </div>
+                                </div></a>
                                 <div class="cards_price">
                                     <span>7 900,65 Р</span>
                                     <p class="price">2 200,25 Р</p>
@@ -241,11 +251,11 @@
                                 </div>
                             </div>
                             <div class="cards swiper-slide">
-                                <div class="cards_desc">
+                                <a href="products-detail.html"><div class="cards_desc">
                                     <img src="./img/spec-offers.png" alt="">
                                     <h4>Вентиль электропневматический</h4>
                                     <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
-                                </div>
+                                </div></a>
                                 <div class="cards_price">
                                     <span>7 900,65 Р</span>
                                     <p class="price">2 200,25 Р</p>
@@ -253,11 +263,11 @@
                                 </div>
                             </div> 
                             <div class="cards swiper-slide">
-                                <div class="cards_desc">
+                                <a href="products-detail.html"><div class="cards_desc">
                                     <img src="./img/spec-offers.png" alt="">
                                     <h4>Вентиль электропневматический</h4>
                                     <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
-                                </div>
+                                </div></a>
                                 <div class="cards_price">
                                     <span>7 900,65 Р</span>
                                     <p class="price">2 200,25 Р</p>
@@ -265,11 +275,11 @@
                                 </div>
                             </div> 
                             <div class="cards swiper-slide">
-                                <div class="cards_desc">
+                                <a href="products-detail.html"><div class="cards_desc">
                                     <img src="./img/spec-offers.png" alt="">
                                     <h4>Вентиль электропневматический</h4>
                                     <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
-                                </div>
+                                </div></a>
                                 <div class="cards_price">
                                     <span>7 900,65 Р</span>
                                     <p class="price">2 200,25 Р</p>
@@ -347,9 +357,9 @@
                         <h4>Обратная связь</h4>
                         <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
                             заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
-                        <input type="text" name="" id="" placeholder="Имя" class="foot_inp">
-                        <input type="text" name="" id="" placeholder="Телефон" class="foot_inp">
-                        <a type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></a>
+                        <input type="text" name="name" id="" placeholder="Имя" class="foot_inp">
+                        <input type="text" name="phone" id="" placeholder="Телефон" class="foot_inp">
+                        <button type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></button>
                     </form>
                     <div class="footer_right_cont">
                     <img src="./img/logo-footer.png" alt="" class="footer_right_img">
