--- a/products.html
+++ b/products.html
@@ -515,9 +515,9 @@
                         <h4>Обратная связь</h4>
                         <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
                             заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
-                        <input type="text" name="" id="" placeholder="Имя" class="foot_inp">
-                        <input type="text" name="" id="" placeholder="Телефон" class="foot_inp">
-                        <a type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></a>
+                        <input type="text" name="name" id="" placeholder="Имя" class="foot_inp">
+                        <input type="text" name="phone" id="" placeholder="Телефон" class="foot_inp">
+                        <button type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></button>
                     </form>
                     <div class="footer_right_cont">
                     <img src="./img/logo-footer.png" alt="" class="footer_right_img">
