--- a/uslugi-detail.html
+++ b/uslugi-detail.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proizvodstvo</title>
+    <title>Uslugi-detail</title>
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display?styles=98774,98777,98776,98772,98773,98775,98770,98771,98769" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/oswald-4?styles=21468" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style-proizvodstvo.css">
+    <link rel="stylesheet" href="css/style-uslugi-detail.css">
 </head>
 <body>
     <header class="header" id="header">
@@ -57,9 +57,9 @@
             <ul class="sidebar_list">
                 <li class="sidebar_li"><a href="/">ГЛАВНАЯ</a></li>
                 <li class="sidebar_li"><a href="products.html">ПРОДУКЦИЯ</a></li>
-                <li class="sidebar_li"><a href="uslugi.html">УСЛУГИ</a></li>
+                <li class="sidebar_li sidebar_li_act"><a href="uslugi.html">УСЛУГИ</a></li>
                 <li class="sidebar_li"><a href="dostavka.html">ДОСТАВКА</a></li>
-                <li class="sidebar_li sidebar_li_act"><a href="proizvodstvo.html">ПРОИЗВОДСТВО</a></li>
+                <li class="sidebar_li"><a href="proizvodstvo.html">ПРОИЗВОДСТВО</a></li>
                 <li class="sidebar_li"><a href="info.html">ИНФОРМАЦИЯ</a></li>
                 <li class="sidebar_li"><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
@@ -131,50 +131,40 @@
                     <div class="intro_nav">
                         <a href="/"><img src="../img/dostavka/arrow-left-grey.png" alt="">Главная</a>
                         <p>|</p>
-                        <a href="">Производство</a>
+                        <a href="">Услуги</a>
+                        <p>|</p>
+                        <a href="">Услуги подробнее</a>
                     </div>
                     <div class="service_wrap">
-                        <h1 class="intro_h2">Производство</h1>
+                        <h1 class="intro_h2">Услуги подробнее</h1>
                         <div class="serv_card_wrap">
-                            <div class="pro_left">
-                                <p>Постоянно ведется разработка и освоение новой продукции. 
-                                    Пополняется станочный парк и закупается новое оборудование.</p>
-                                <p>Штат укомплектован высококвалифицированными сотрудниками, 
-                                    инженерно-техническими работниками, действует конструкторское бюро.</p>
-                                <p>На данный момент наша компания освоила выпуск более ста номенклатурных позиций.</p>
-                                <p>Наша организация имеет собственные производственные площади и мощность с 
-                                    необходимым оборудованием: <br>
-                                    - Участок механической обработки. <br>
-                                    - Участок термической обработки. <br>
-                                    - Сварочный участок. <br>
-                                    - Сборочный участок. <br>
-                                    - Испытательный участок. <br>
-                                    - Покрасочный участок.</p>
+                            <div class="serv_desc">
+                                <div class="p_wrap">
+                                <p>Наша компания изготавливает различные виды машиностроительной продукции, 
+                                    как по чертежам заказчика, так и по "образцу" с разработкой 
+                                    конструкторской документации.</p>
+                                <div class="serv_img_mob">
+                                    <img src="./img/uslugi/detail-img-mob.png" alt="">
+                                </div>
+                                </div>
+                                <form action="" class="serv_form">
+                                    <h3>Заказ услуги</h3>
+                                    <p>Для заказа услуги - заполните анкету.</p>
+                                    <div class="inputs_wrap">
+                                        <div class="inp_name_phone">
+                                            <input type="text" name="name" id="" placeholder="Имя" class="serv_inp">
+                                            <input type="text" name="phone" id="" placeholder="Телефон" class="serv_inp">
+                                        </div>
+                                        <div class="inp_problem">
+                                            <textarea name="story" placeholder="Ваша проблема"></textarea>
+                                        </div>
+                                    </div>
+                                    <a href="" class="file_ad">Прикрепить файлы <img src="./img/uslugi/files.svg" alt=""></a>
+                                    <button type="submit" name="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></button>
+                                </form>
                             </div>
-                            <div class="pro_right">
-                                <div class="pro_right_mob">
-                                    <img src="./img/proizvodstvo/pro-img-1-ad.png" alt="">
-                                    <img src="./img/proizvodstvo/pro-img-2-ad.png" alt="">
-                                    <img src="./img/proizvodstvo/pro-img-3-ad.png" alt="">
-                                    <img src="./img/proizvodstvo/pro-img-4-ad.png" alt="">
-                                </div>
-                                <div class="pro_img">
-                                    <img src="./img/proizvodstvo/pro-img-1.png" alt="" class="img_des">
-                                    <img src="./img/proizvodstvo/pro-img-1-ad.png" alt="" class="img_mob">
-                                </div>
-                                <div class="pro_img">
-                                    <img src="./img/proizvodstvo/pro-img-2.png" alt="" class="img_des">
-                                    <img src="./img/proizvodstvo/pro-img-2-ad.png" alt="" class="img_mob">
-                                </div>
-                               
-                                <div class="pro_img">
-                                    <img src="./img/proizvodstvo/pro-img-3.png" alt="" class="img_des">
-                                    <img src="./img/proizvodstvo/pro-img-3-ad.png" alt="" class="img_mob">
-                                </div>
-                                <div class="pro_img">
-                                    <img src="./img/proizvodstvo/pro-img-4.png" alt="" class="img_des">
-                                    <img src="./img/proizvodstvo/pro-img-4-ad.png" alt="" class="img_mob">
-                                </div>
+                            <div class="serv_img">
+                                <img src="./img/uslugi/detail-img.png" alt="">
                             </div>
                         </div>
                     </div>
