--- a/uslugi.html
+++ b/uslugi.html
@@ -59,7 +59,7 @@
                 <li class="sidebar_li"><a href="products.html">ПРОДУКЦИЯ</a></li>
                 <li class="sidebar_li sidebar_li_act"><a href="uslugi.html">УСЛУГИ</a></li>
                 <li class="sidebar_li"><a href="dostavka.html">ДОСТАВКА</a></li>
-                <li class="sidebar_li"><a href="">ПРОИЗВОДСТВО</a></li>
+                <li class="sidebar_li"><a href="proizvodstvo.html">ПРОИЗВОДСТВО</a></li>
                 <li class="sidebar_li"><a href="info.html">ИНФОРМАЦИЯ</a></li>
                 <li class="sidebar_li"><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
@@ -147,7 +147,7 @@
                                         продукции, как по чертежам заказчика, так и по "образцу" с 
                                         разработкой конструкторской документации.</p>
                                     </div>
-                                    <a href="" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
+                                    <a href="uslugi-detail.html" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
                                 </div>
                                 <div class="serv_img">
                                     <img src="../img/uslugi/uslugi-1.png" alt="">
@@ -163,7 +163,7 @@
                                     <p>Наша компания выполняет, как гарантийный так и постгарантийный 
                                         ремонт изделий. </p>
                                     </div>
-                                    <a href="" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
+                                    <a href="uslugi-detail.html" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
                                 </div>
                                 <div class="serv_img">
                                     <img src="../img/uslugi/uslugi-2.png" alt="">
@@ -180,7 +180,7 @@
                                         Имеем в своём распоряжении печь камерного типа  и установку 
                                         ТВЧ.</p>
                                     </div>
-                                    <a href="" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
+                                    <a href="uslugi-detail.html" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
                                 </div>
                                 <div class="serv_img">
                                     <img src="../img/uslugi/uslugi-3.png" alt="">
@@ -196,7 +196,7 @@
                                     <p>Наша компания имеет собственное конструкторское бюро и готова 
                                         оказать соответствующие услуги.</p>
                                     </div>
-                                    <a href="" class="serv_btn">Заказать <img src="./img/arrow-right-intro.png" alt=""></a>
+                                    <a href="uslugi-detail.html" class="serv_btn">Заказать <img src="./img/arrow-right-intro.png" alt=""></a>
                                 </div>
                                 <div class="serv_img">
                                     <img src="../img/uslugi/uslugi-4.png" alt="">
@@ -207,75 +207,75 @@
                 </div>
             </section>
         </main>
-    <footer class="footer">
-        <div class="footer_wrap">
-            <div class="footer_left">
-                <div class="footer_left_top">
-                    <p>Если Вы являетесь конечным заказчиком и хотели бы получить рекомендации
-                         от других предприятий в своем регионе, напишите нам на почту или
-                          свяжитесь с нашими менеджерами по телефону.</p>
-                    <div class="foot_left_btn">
-                        <a href="">Позвонить <img src="./img/footer-call-ico.svg" alt=""></a>
-                        <a href="">Написать <img src="./img/footer-mail-ico.svg" alt=""></a>
+        <footer class="footer">
+            <div class="footer_wrap">
+                <div class="footer_left">
+                    <div class="footer_left_top">
+                        <p>Если Вы являетесь конечным заказчиком и хотели бы получить рекомендации
+                             от других предприятий в своем регионе, напишите нам на почту или
+                              свяжитесь с нашими менеджерами по телефону.</p>
+                        <div class="foot_left_btn">
+                            <a href="">Позвонить <img src="./img/footer-call-ico.svg" alt=""></a>
+                            <a href="">Написать <img src="./img/footer-mail-ico.svg" alt=""></a>
+                        </div>
+                    </div>
+                    <form action="" class="contact_us_mob">
+                        <h4>Обратная связь</h4>
+                        <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
+                            заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
+                        <input type="text" name="" id="" placeholder="Имя" class="foot_inp">
+                        <input type="text" name="" id="" placeholder="Телефон" class="foot_inp">
+                        <a type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></a>
+                    </form>
+                    <div class="footer_left_bot">
+                        <h3>Контакты</h3>
+                        <div class="footer_cont_card">
+                            <div class="footer_cont_card_l">
+                                <p class="footer_bold">Отдел сбыта</p>
+                                <p class="footer_p">8(4832) 32-10-65</p>
+                                <p class="footer_p">32-10-66</p>
+                                <p class="footer_p">32-10-67</p>
+                                <p class="footer_p"> info.sbyt@32po.ru</p>
+                            </div>
+                            <div class="footer_cont_card_r">
+                                <div class="footer_cont_card_r_desc">
+                                    <p class="footer_bold">Главный бухгалтер</p>
+                                    <p class="footer_p">info.buh@32po.ru</p>
+                                </div>
+                                <div class="footer_cont_card_r_desc">
+                                    <p class="footer_bold">Отдел снабжения</p>
+                                    <p class="footer_p">info.snab@32po.ru</p>
+                                </div>
+                                <div class="footer_cont_card_r_desc">
+                                    <p class="footer_bold">Отдел логистики</p>
+                                    <p class="footer_p"> info.log@32po.ru</p>
+                                </div>
+                                <div class="footer_cont_card_r_desc">
+                                    <p class="footer_bold">Производство</p>
+                                    <p class="footer_p">Брянск, ул. 50 Армии, 1</p>
+                                    <p class="footer_p"> info.pro@32po.ru</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <form action="" class="contact_us_mob">
-                    <h4>Обратная связь</h4>
-                    <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
-                        заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
-                    <input type="text" name="" id="" placeholder="Имя" class="foot_inp">
-                    <input type="text" name="" id="" placeholder="Телефон" class="foot_inp">
-                    <a type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></a>
-                </form>
-                <div class="footer_left_bot">
-                    <h3>Контакты</h3>
-                    <div class="footer_cont_card">
-                        <div class="footer_cont_card_l">
-                            <p class="footer_bold">Отдел сбыта</p>
-                            <p class="footer_p">8(4832) 32-10-65</p>
-                            <p class="footer_p">32-10-66</p>
-                            <p class="footer_p">32-10-67</p>
-                            <p class="footer_p"> info.sbyt@32po.ru</p>
-                        </div>
-                        <div class="footer_cont_card_r">
-                            <div class="footer_cont_card_r_desc">
-                                <p class="footer_bold">Главный бухгалтер</p>
-                                <p class="footer_p">info.buh@32po.ru</p>
-                            </div>
-                            <div class="footer_cont_card_r_desc">
-                                <p class="footer_bold">Отдел снабжения</p>
-                                <p class="footer_p">info.snab@32po.ru</p>
-                            </div>
-                            <div class="footer_cont_card_r_desc">
-                                <p class="footer_bold">Отдел логистики</p>
-                                <p class="footer_p"> info.log@32po.ru</p>
-                            </div>
-                            <div class="footer_cont_card_r_desc">
-                                <p class="footer_bold">Производство</p>
-                                <p class="footer_p">Брянск, ул. 50 Армии, 1</p>
-                                <p class="footer_p"> info.pro@32po.ru</p>
-                            </div>
-                        </div>
+                <div class="footer_right">
+                    <form action="" class="contact_us">
+                        <h4>Обратная связь</h4>
+                        <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
+                            заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
+                        <input type="text" name="name" id="" placeholder="Имя" class="foot_inp">
+                        <input type="text" name="phone" id="" placeholder="Телефон" class="foot_inp">
+                        <button type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></button>
+                    </form>
+                    <div class="footer_right_cont">
+                    <img src="./img/logo-footer.png" alt="" class="footer_right_img">
+                    <p class="footer_right_p">Более 13 лет успешной поставки оборудования и
+                         запчастей. Более 6 лет собственного производства.</p>
                     </div>
                 </div>
             </div>
-            <div class="footer_right">
-                <form action="" class="contact_us">
-                    <h4>Обратная связь</h4>
-                    <p>Если у вас есть какие-либо вопросы или запросы, пожалуйста, 
-                        заполните форму ниже, и мы свяжемся с вами в кратчайшие сроки!</p>
-                    <input type="text" name="" id="" placeholder="Имя" class="foot_inp">
-                    <input type="text" name="" id="" placeholder="Телефон" class="foot_inp">
-                    <a type="submit" class="submit">Отправить <img src="./img/arrow-right-intro.png" alt=""></a>
-                </form>
-                <div class="footer_right_cont">
-                <img src="./img/logo-footer.png" alt="" class="footer_right_img">
-                <p class="footer_right_p">Более 13 лет успешной поставки оборудования и
-                     запчастей. Более 6 лет собственного производства.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+        </footer>
     <script src="./js/main.js" ></script>
 </body>
 </html>
